# OS_Labs

Lab1/: CMakeLists.txt  README.md  build.cmd  build.sh
Lab1/src/: main.cpp
Lab2/: CMakeLists.txt  README.md  main.cpp
Lab2/lib/: process_lib.h  process_lib_posix.cpp  process_lib_win.cpp
Lab2/scripts/: build.cmd
Lab3/: CMakeLists.txt  README.md  log.txt  main.cpp  my_shmem.hpp
Lab4/: CMakeLists.txt  README.md
Lab4/scripts/: build.cmd  build.sh
Lab4/src/: client.cpp  serial_port_posix.cpp  serial_port_win.cpp  server.cpp
Lab5/: .gitignore  CMakeLists.txt  README.md
Lab5/data/: temperature.db
Lab5/src/: client.cpp  db.cpp  db.h  serial_port.h  serial_port_win.cpp  server.cpp
Lab5/web/: index.html  script.js  style.css
Lab6/: .gitignore  CMakeLists.txt  README.md
Lab6/data/: temperature.db
Lab6/scripts/: build.cmd  build.sh
Lab6/src/: HTTPClient.cpp  HTTPClient.h  TemperatureGraph.cpp  TemperatureGraph.h  client.cpp  db.cpp  main.cpp  server.cpp
